--- a/src/style/objects/_grid.scss
+++ b/src/style/objects/_grid.scss
@@ -37,7 +37,8 @@
   display: flex;
   align-items: stretch;
   flex-flow: row wrap;
-  padding: 0 0.375rem;
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
 }
 
 .o-grid--center {
@@ -53,8 +54,12 @@
   margin-right: -0.75rem;
 }
 
+.o-grid--inside-half {
+  margin-left: -0.375rem;
+  margin-right: -0.375rem;
+}
+
 .o-grid__item {
-  width: 100%;
   padding-left: 0.375rem;
   padding-right: 0.375rem;
 }
